# PWHomeWork14

./: .gitignore  docker-compose.yml  main.py  pyproject.toml  test.db
docs/source/: conf.py  index.rst
migrations/: env.py
migrations/versions/: 00ff9713cbab_init.py  84e78ed5578c_init.py  8c790270bb77_add_field_confirmed.py
src/: schemas.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/services/: auth.py  email.py
src/services/templates/: email_template.html
tests/: conftest.py  test_unit_repository_contacts.py
